# nopgd

./: README.md  pyproject.toml
dev_utils/: full_to_light_snapshot_json.py  snapshot_to_snapshot_paging_data.py
paging_detection/: __init__.py  analyze_type_prediction.py  arm64.py  determine_types.py  extract_all_pages.py  extract_known_paging_structures.py  filters.py  graphs.py  interfaces.py  mmaped.py  serialisation.py  utils.py
volatility_plugins/: pslist_with_pgds.py
volatility_plugins/linux/: pslist_with_pgds.py
