[tool.poetry]
name = "nopgd"
version = "0.1.0"
description = ""
authors = ["Niklas Beierl"]

packages = [
    { include = "paging_detection" },
]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
networkx = "^2.5.1"
volatility3 = { version = "^1.0.1", optional = true }
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
black = "^21.4b1"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.extras]
vol = ["volatility3"]

[tool.black]
line-length = 120
